# capitalg

./: .gitignore  Dockerfile  README.md  requirements.dev.txt  run.py  setup.cfg  setup.py
capitalg/: CostBaseQueue.py  TransactionLoader.py  Writer.py  __init__.py  cg_helpers.py  commands.py  contstants.py  errors.py  main.py  rates_loader.py  utils.py
capitalg/analysis/: __init__.py  balance.py  summary.py
tests/: test_cg_helpers.py  test_cost_base_queue.py  test_main.py  test_summary.py  test_transaction_loader.py  test_utils.py  test_writer.py
tests/fixtures/: rates.csv  transactions.csv  transactions_2.csv
