[metadata]
name = capitalg
version = 0.0.1
author = dleber
author_email = 13130406+dleber@users.noreply.github.com
description = Capital Gains Calculator
license = GNU
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dleber/capitalg
project_urls =
    Bug Tracker = https://github.com/dleber/capitalg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = capitalg
packages = find:
python_requires = >=3.6

[options.packages.find]
where = capitalg